# spikard

./: .gitignore  CMakeLists.txt  InnerRequest.cpp  InnerRequest.hpp  Makefile  XHR.cpp  XHR.h  XHR.hpp  cgi.cpp  comands.list  core.cmds.cpp  core.cpp  core.h  core.hpp  main.cpp  main_bc.cpp  main_dbg.cpp  protocol.rst  protocol_decl  users.list  ДарВетер.diary
Debug/: test_build
client/: code.js  index.html  style.css
docs/: mathlang.md  мысли.rst
experiments/: CMakeLists.txt
lib/: CMakeLists.txt
lib/mathlang/: CMakeLists.txt  branch_node.cpp  branch_node.hpp  definition.hpp  lexer.cpp  lexer.hpp  lexer2.cpp  lexer2.hpp  logic.cpp  logic.hpp  mathtype.cpp  mathtype.hpp  named_node.cpp  named_node.hpp  names.cpp  names.hpp  names_strategies.cpp  names_strategies.hpp  old_parser.hpp  parser.cpp  parser.hpp  parser2.cpp  parser2.hpp  primary_node.cpp  primary_node.hpp  rationale.cpp  rationale.hpp  statement.cpp  statement.hpp  structure.cpp  structure.hpp  terms.cpp  terms.hpp  view.cpp  view.hpp
lib/mathlang/basics/: abstractname.cpp  argument_place.cpp  argument_place.hpp  complex.cpp  complex.hpp  connectives.cpp  connectives.hpp  contructed_term.cpp  contructed_term.hpp  contructedterm.cpp  contructedterm.hpp  function.cpp  function.hpp  mapterm.cpp  mapterm.hpp  mathtype.cpp  mathtype.hpp  named_term.cpp  named_term.hpp  namestype.cpp  namestype.hpp  primary.cpp  primary.hpp  string_name.cpp  string_name.hpp  terms.cpp  terms.hpp  tex_name.cpp  tex_name.hpp  texname.cpp  texname.hpp
lib/mathlang/consepts/: abstract_complificator.cpp  abstract_complificator.hpp  abstract_connective.cpp  abstract_connective.hpp  abstract_name.cpp  abstract_name.hpp  complex.cpp  complex.hpp  terms.hpp
lib/mathlang/parser/: lexeme.cpp  lexeme.hpp  lexer.cpp  lexer.hpp  old_parser.cpp  old_parser.hpp  parser.cpp  parser.hpp
lib/mathlang/parser/parser_tests/: brackets.cpp  captureSymbol.cpp  int.cpp  lim.cpp  names.cpp  set_defenition.cpp  sum.cpp  symbols.cpp
lib/mathlang/parser_tests/: CMakeLists.txt  brackets.cpp  captureSymbol.cpp  elimination.cpp  int.cpp  lim.cpp  names.cpp  set_defenition.cpp  sum.cpp  symbols.cpp
lib/mathlang/proof/: definition.cpp  definition.hpp  named_node.cpp  named_node.hpp  names_index.cpp  names_index.hpp  names_strategies.cpp  names_strategies.hpp  statement.cpp  statement.hpp  structure.cpp  structure.hpp  theorem_node.cpp  theorem_node.hpp
lib/mathlang/proof/tests/: CMakeLists.txt  real_numbers.cpp  theorem_example.cpp
plugins/: CMakeLists.txt  basemath.cpp  basemath.hpp  comand.list  diary.cpp  mkplugin.sh  testplugin.cpp
plugins/basemath/: множество
plugins/first-order_logic/: CMakeLists.txt  formulas.cpp  formulas.hpp  inference.cpp  inference.hpp  interpr.cpp  logic.cpp  logic.hpp  parser.cpp  parser.hpp  signature.cpp  signature.hpp  test.cpp
plugins/math/: CMakeLists.txt  mathlang.cpp  test.cpp
plugins/mathlang/: CMakeLists.txt  inference.hpp  logic.cpp  logic.hpp  mathlang.cpp  parser.cpp  parser.hpp  rationale.hpp  signature.cpp  signature.hpp  structure.cpp  structure.hpp  test.cpp
web/: add_module.php  auth.php  code.js  index.html  style.css
web/modules/: add_module.js  auth.js  modules.list  terminal.css  terminal.js
