add_executable(sum sum.cpp)
target_link_libraries(sum LINK_PUBLIC mathlang)
add_executable(int int.cpp)
target_link_libraries(int LINK_PUBLIC mathlang)
add_executable(lim lim.cpp)
target_link_libraries(lim LINK_PUBLIC mathlang)
add_executable(brackets brackets.cpp)
target_link_libraries(brackets LINK_PUBLIC mathlang)
add_executable(names names.cpp)
target_link_libraries(names LINK_PUBLIC mathlang)
add_executable(captureSymbol captureSymbol.cpp)
target_link_libraries(captureSymbol LINK_PUBLIC mathlang)
