add_executable(sum sum.cpp)
target_link_libraries(sum LINK_PUBLIC gtest gtest_main mathlang)
add_executable(int int.cpp)
target_link_libraries(int LINK_PUBLIC gtest gtest_main mathlang)
add_executable(lim lim.cpp)
target_link_libraries(lim LINK_PUBLIC gtest gtest_main mathlang)
add_executable(brackets brackets.cpp)
target_link_libraries(brackets LINK_PUBLIC gtest mathlang)
add_executable(names names.cpp)
target_link_libraries(names LINK_PUBLIC gtest mathlang)
add_executable(symbols symbols.cpp)
target_link_libraries(symbols LINK_PUBLIC mathlang)
add_executable(set set_defenition.cpp)
target_link_libraries(set LINK_PUBLIC mathlang)
